application/brennoflavio/tokai/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tokai
  namespace: tokai
  labels:
    app: tokai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tokai
  template:
    metadata:
      labels:
        app: tokai
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
      containers:
      - name: tokai
        image: git.brennoflavio.com.br/brennoflavio/tokai:v0.0.3 # {"$imagepolicy": "tokai:tokai"}
        ports:
        - containerPort: 8000
        startupProbe:
          tcpSocket:
            port: 8000
          failureThreshold: 30
          periodSeconds: 2
        readinessProbe:
          tcpSocket:
            port: 8000
        livenessProbe:
          tcpSocket:
            port: 8000
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: uv-cache
          mountPath: /.cache
        resources:
          limits:
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 128Mi
      volumes:
      - name: uv-cache
        emptyDir: {}
